[gd_scene load_steps=5 format=3 uid="uid://bffr1vnookrrj"]

[ext_resource type="Script" path="res://snake_body.gd" id="1_up7kq"]
[ext_resource type="Texture2D" uid="uid://btwv27ofel86p" path="res://assets/png/snake_green_blob.png" id="2_m2tq7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0lu3a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m2tq7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8wbub"]
radius = 90.1388

[node name="snake_body" type="Area2D"]
scale = Vector2(1.15, 1.15)
collision_mask = 6
script = ExtResource("1_up7kq")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_0lu3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8wbub")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
